<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.PizzaFragment">

    <TextView
        android:id="@+id/pizza_name_text_view"
        android:text="@string/pizza_name"
        android:textColor="@android:color/holo_green_light"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_layout"/>

    <ImageView
        android:id="@+id/photo_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/pizza_name"
        android:background="@drawable/greek_pizza"/>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="46dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/description_text_view"
                android:textSize="22sp"
                android:textColor="@android:color/holo_green_light"
                android:textAlignment="center"
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/description_text"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:text="@string/pizza_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/ingredients_text_view"
                android:textSize="20sp"
                android:textColor="@android:color/holo_green_light"
                android:textAlignment="center"
                android:text="@string/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/ingredients_text"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:text="@string/pizza_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/order_status_text_view"
        android:text="@string/not_ordered"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="46sp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_gravity="bottom"
        android:padding="8dp">
        <Button
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:id="@+id/order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textSize="22sp"
            android:textColor="@android:color/holo_green_light"
            android:background="@drawable/drawable_btn"/>
        <Button
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="22sp"
            android:textColor="@android:color/holo_green_light"
            android:background="@drawable/drawable_btn"/>
        <Button
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:id="@+id/call_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:textSize="22sp"
            android:textColor="@android:color/holo_green_light"
            android:background="@drawable/drawable_btn"/>
    </LinearLayout>

</FrameLayout>